--- a/templates/index.html
+++ b/templates/index.html
@@ -29,9 +29,9 @@
 					</div>
                         <div class="collapse navbar-collapse" id="daohangtiao">
 						<ul class="nav navbar-nav">
-							<li><a href="#">首页</a></li>
-							<li><a href="#">论坛</a></li>
-							<li><a href="#">数据集</a></li>
+							<li><a href="#">HOME</a></li>
+							<li><a href="#">COMMUNITY</a></li>
+							<li><a href="#">DATA SET</a></li>
 							<li><a href="#">CARLA</a></li>
 							<li class="wd1"><a href="">GitHub</a>
 								<ul class="wd2 clearfix">
@@ -68,7 +68,7 @@
                     <div class="video">
                         <video autoplay="autoplay" muted="muted" loop="loop">
                             <source type="video/webm" src="../static/video/video2.webm"></source>
-                            <source type="video/mp4" src="../static/video/video2.mp4"></source>
+                            <source type="video/mp4" src="../static/video/index_1.mp4"></source>
                         </video>
                     </div>
                     <div class="cover">
@@ -81,7 +81,7 @@
                                 <div class="co2" >
                                     <p>基于意图理解的驾驶行为分析与预测</p>
                                 </div>
-                                <a class="co3" href="#" >Jump in now</a>
+                                <a class="co3" href="{{ url_for('jump') }}" >Jump in now</a>
                             </div>
                         </div>
                     </div>
