--- a/static/css/login&register.css
+++ b/static/css/login&register.css
@@ -49,6 +49,7 @@ html, body {
     border-color: #2ea44f;
     font-size: 16px;
     font-weight: bold;
+    width: 120px;
 }
 
 .btn-primary:hover {
